static/css/main.css
body {
  font-family: "Lato", "Helvetica Neue", Arial, sans-serif;
  background-color: var(--ons-color-grey-35);
  margin-left: 20px;
  margin-top: 15px;
  margin-right: 20px;
}

label {
  display: inline-block;
  font-weight: 600;
  margin-bottom: 0.25rem;
  width: 200px;
  font-size: 0.9rem;
}

.reload-button {
  min-width: 1.5rem;
}

.load-id-button {
  max-width: 40.67rem;
  display: flex;
  justify-content: flex-end;
}

